# python-notepad

./: Cargo.toml  pyproject.toml
notepad/: __main__.py  exceptions.py  logic.py
src/: lib.rs
